<resources>
    <string name="app_name">Tela Login</string>
    <string name="bem_vindo_ao_aplicativo">Bem vindo ao aplicativo</string>
    <string name="welcome_to_the_apps">Welcome to the apps</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="doesn_t_have_an_account_yet">Doesn\'t have an account yet?</string>
    <string name="sing_up"><u>Sing Up</u></string>
    <string name="usename">Usename</string>
</resources>